# bean

./: .gitignore  .gitlab-ci.yml  README.md  run_tests.sh
.github/workflows/: tests.yml
bean-config/: README.md  pyproject.toml
bean-config/src/bean/: config.py
bean-core/: README.md  pyproject.toml
bean-core/src/bean/: core.py
examples/: tiwi.py
tests/: utils.py
tests/test_bean/: test_app.py  test_config.py  test_logging.py  test_main.py  test_scheduler.py  test_shell.py  test_type_classes.py
tests/test_config/: test_config.py
tests/test_core/: test_config_validators.py  test_main.py  test_pipes.py  test_signals.py  test_type_classes.py
tools/: api_guard.py  run_snapshots.sh  upload.sh
